[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobwatch"
version = "0.2.0"
description = "Monitor long-running local jobs via Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["monitoring", "telegram", "notifications", "jobs", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = ["requests>=2.28"]

[tool.setuptools]
packages = ["jobwatch"]
